--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,311 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.aside {
+  min-height: calc(100vh - 66px);
+  background: url("./Img/alla.gif") center/cover no-repeat;;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Fira Sans', sans-serif;
+  margin-top: -70px;
+}
+.surr{
+ 
+  display: block;
+  padding-left: 70px;
+  justify-content: start;
+  align-items: flex-start;
+  color: rgb(49, 3, 92);
+}
+
+.iim{
+  width: 600px;
+  height: 700px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+h1,h2,h3,h4,h5,h6,label,span {
+  font-weight: 500;
+  font-family: 'Fira Sans', sans-serif;
+}
+.aside, html, .App, #root, .auth-wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.navbar-light {
+  background-color: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+}
+
+.auth-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+}
+.okk{
+  width: 100%;
+  height: 100px;
+  color: white;
+  text-align: center;
+  background-color: rgb(4, 4, 53);
+}
+
+.auth-inner {
+  width: 700px;
+  margin: 50px;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  transition: all .3s;
+  margin-left: 27%;
+  
+}
+
+.auth-wrapper .form-control {
+  border-color: #167bff;
+  box-shadow: none;
+  background-color: rgb(4, 4, 53);
+  color: white;
+}
+
+
+
+.auth-wrapper .form-control:focus {
+  border-color: #167bff;
+  box-shadow: none;
+  background-color: rgb(4, 4, 53);
+  color: white;
+}
+
+
+.auth-wrapper h3 {
+  text-align: center;
+  margin: 0;
+  line-height: 1;
+  padding-bottom: 20px;
+}
+
+.custom-control-label {
+  font-weight: 400;
+}
+
+.yok{
+  width: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
+  grid-row-gap: 2rem;
+  grid-column-gap: 10px;
+  background-color:white;
+  word-wrap: break-word;
+}
+.yoro{
+ width: 600px;
+ display: "flex";
+ background-color: rgb(4, 4, 53);
+ height: 350px;
+ margin-left: 120px;
+ margin-top: 60px;
+ word-wrap: break-word;
+}
+.btn-pri {
+  display: inline-block;
+  text-decoration: none;
+  letter-spacing: var(--mainSpacing);
+  color: white;
+  background: rgb(4, 4, 53);
+  padding: 0.4rem 0.9rem;
+  border: rgb(49, 3, 92);
+  transition: var(--mainTransition);
+  text-transform: uppercase;
+  cursor: pointer;
+  width: 150px;
+  text-align: center;
+}
+.btn-pri:hover {
+  background: rgb(4, 4, 53);
+  color: darkorange;
+}
+.goo{
+  width:85px;
+  height: 70px;
+  background-color: darkorange;
+  position: absolute;
+  margin-top: 60px;
+  margin-left: 260px;
+}
+.servic {
+  background: rgb(4, 4, 53);
+ }
+ .servic h5{
+  text-align: start;
+   color: white;
+   margin-left: 50px;
+ }
+ 
+ .servic div{
+   
+   height: 300px;;
+ }
+ .eke{
+   float: right;
+   margin-top: -480px;
+   padding: 150px;
+   color: white;
+
+ }
+ .ser {
+  padding: 3rem 0;
+}
+.ser {
+  background:white;
+  text-align: center;
+  color: rgb(4, 4, 53)
+  
+}
+ .rut{
+   width: 200px;
+   background-color: white;
+   position: relative;
+   height: 2px;
+   
+ }
+.gira{
+  width: 20px;
+  height: 20px;
+  background-color: rgb(4, 4, 53);
+  position: absolute;
+ margin-left: 35px;
+ margin-top: 25px;
+}
+.hiss{
+  color: darkorange;
+  position: absolute;
+  margin-top: 170px;
+  margin-left: 150px;
+}
+.hiss h6{
+  color: darkorange;
+  font-size: 18px;
+  text-align: center;
+  
+}
+.joroo{
+  color: white; 
+}
+.den{
+  position: absolute;
+  width: 600px;
+  display: "flex";
+  background-color: rgb(4, 4, 53);
+  height: 270px;
+  margin-left: 660px;
+  margin-top: 0px;
+
+}
+.amy{
+  text-align: center;
+  font-size: 18px;
+  color: white;
+  font-weight: bold;
+}
+.duro{
+  padding-top: 15px;
+  text-align: center;
+  color: darkorange;
+}
+.ety{
+  background-color: darkorange;
+  width: 100%;
+  height: 400px;
+  text-align: center;
+  color: rgb(4, 4, 53);
+  display: none;
+
+}
+.faars{
+  background: darkorange;
+  width: 160px;
+  height: 70px;
+  text-align: center;
+ margin-left: 85%;
+ margin-top: -40px;
+ position: absolute;
+ border-radius: 25px;
+}
+.faars:hover {
+  background: rgb(4, 4, 53);
+  color: white;
+  text-decoration: none;
+}
+.tye{
+  color: darkorange;
+  font-size: 26px;
+  position: absolute;
+  margin-left: 27%;
+  margin-top: -40px;
+}
+@media screen and (min-width: 340px)and (max-width: 1200px ) {
+  .yoro{
+    width: 100%;
+    height: 300px;
+    margin-left: 0px;
+    margin-top: 30px;
+  }
+ .tye{
+   display: none;
+ }
+ .faars{
+   display: none;
+ }
+  .iim{
+    width: 250px;
+    height: 250px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+  }
+  .ety{
+    display: block;
+  }
+  .serv{
+    display: none;
+  }
+  .goo{
+    display: none;
+  }
+  .gira{
+  display: none;
+  }
+  .auth-inner {
+    width: 100%;
+    margin: 0px;
+    background: #ffffff;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+    padding: 40px 55px 45px 55px;
+    border-radius: 15px;
+    transition: all .3s;
+    
+    
+  }
+  .den{
+    width: 100%;
+    height: 300px;
+    margin-left: 0px;
+    margin-top: 30px;
+    
+  }
+ 
+  .amy{
+    color:darkorange;
+  }
+  .hiss h6{
+    display: none;
+  }
+  
 }
